apps/siyuan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: siyuan
  labels:
    name: siyuan
