apps/siyuan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siyuan
  namespace: siyuan
  labels:
    app: siyuan
spec:
  type: ClusterIP
  selector:
    app: siyuan
  ports:
    - name: http
      port: 6806
      targetPort: 6806
      protocol: TCP
