apps/siyuan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siyuan
  namespace: siyuan
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: siyuan.inceptech.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siyuan
                port:
                  number: 6806
  # tls:
  #   - hosts:
  #       - siyuan.example.com
  #     secretName: siyuan-tls
